Fix textarea on mobile

--- a/web/style/typolib.css
+++ b/web/style/typolib.css
@@ -589,11 +589,6 @@ td {
         font-size: 1.2em;
     }
 
-    textarea {
-        width: 250px;
-    }
-
-
     .notice {
         padding: 20px 20px 20px 35px;
         max-width: 50%;
